packages/beff-core/tests/snapshots/failures__tests__type_ref.snap
---
source: packages/beff-core/tests/failures.rs
expression: failure(from)
---
--- entry.ts ---
parse.buildParsers<{ UserId: UserId }>();
--------------------------------
Error: Could not resolve addressed value 'entry.ts::UserId'
   ╭─[entry.ts:2:35]
   │
 2 │     parse.buildParsers<{ UserId: UserId }>();
   │                                   ───┬──  
   │                                      ╰──── Could not resolve addressed value 'entry.ts::UserId'
───╯
